--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@supabase/supabase-js": "^2.93.3",
     "antd": "^6.2.3",
     "plasmo": "^0.90.5",
     "react": "^18.2.0",
